--- a/website/index_jq.html
+++ b/website/index_jq.html
@@ -15,6 +15,11 @@
     <div class="btn" id="hide-text">説明を隠す</div>
     <h2 id="text">Hello, World!</h2>
 
+    <div id="language-wrapper">
+        <h1 class="language-title">jQueryとは</h1>
+        <p class="language-text">JavaScriptのライブラリです。</p>
+    </div>
+
     <!-- script.jsの読み込み -->
     <script src="./js/script.js"></script>
   </body>
